Fix subreddit block option

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -425,6 +425,7 @@ body {
   opacity: 0.8;
   font-family: 'Courier New', monospace;
   margin-bottom: 2px;
+  word-break: break-all;
 }
 
 .block-option-description {
